Fixing various layout issues with nested sentences.

--- a/ui/src/test/invocation/sentence/Sentence.scss
+++ b/ui/src/test/invocation/sentence/Sentence.scss
@@ -2,7 +2,7 @@
   width: 100%;
   box-sizing: border-box;
   white-space: normal;
-  display: inline-flex;
+  display: block;
   align-items: baseline;
   flex-wrap: nowrap;
 }
@@ -17,7 +17,7 @@
   border-radius: var(--bulma-border-radius, 4px);
   padding: 0.5rem 1rem;
   max-width: max-content;
-  margin-top: 0.25rem;
+  position: relative;
 }
 
 .ns-floating {
@@ -30,7 +30,8 @@
   background-color: hsl(var(--bulma-message-h), var(--bulma-message-s), calc(var(--bulma-message-background-l) - 2%));
   z-index: var(--bulma-z-index-floating, 100);
   box-shadow: 0.125rem 0.1875rem 0.1875rem 0.125rem hsla(var(--bulma-message-h), calc(var(--bulma-message-s) - 50%), calc(var(--bulma-message-background-l) - 50%), 0.2);
-  border-radius: var(--bulma-border-radius-floating, 5px);
+  border-radius: var(--bulma-border-radius-floating, 4px);
+  border: 1px solid hsla(0, 0%, 0%, 0.05);
   max-width: 90vw;
 }
 
